--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="headbar">
             <a href="#index.html">Home</a>
             <a href="login.html">Login</a>
-            <a href="#doctor">Doctors</a>
+            <a href="doc.html">Doctors</a>
             <a href="#medicine">Medicine</a>
             <a href="#service">Service</a>
             <a href="#contact">Contact</a>
