--- a/doc.html
+++ b/doc.html
@@ -98,9 +98,9 @@
         
         }
         .top .box-container {
-            padding: 6px;
-            display: flex;
-            flex-wrap:nowrap;
+            padding: 6rem;
+            /* display: flex; */
+            /* flex-wrap:; */
             /* display: grid;
             grid-template-columns: auto auto auto auto;
             gap: 1.5rem; */
