--- a/doc.html
+++ b/doc.html
@@ -99,8 +99,8 @@
         }
         .top .box-container {
             padding: 6rem;
-            /* display: flex; */
-            /* flex-wrap:; */
+            display: flex; */
+            flex-wrap:nowrap;
             /* display: grid;
             grid-template-columns: auto auto auto auto;
             gap: 1.5rem; */
