new file created

--- a/doc.html
+++ b/doc.html
@@ -100,7 +100,7 @@
         .top .box-container {
             padding: 6rem;
             display: flex; */
-            flex-wrap:nowrap;
+            /* flex-wrap:nowrap; */
             /* display: grid;
             grid-template-columns: auto auto auto auto;
             gap: 1.5rem; */
