--- a/doc.html
+++ b/doc.html
@@ -100,6 +100,7 @@
         .top .box-container {
             padding: 6rem;
             display: grid;
+            flex: auto;
             grid-template-columns: auto auto auto auto;
             gap: 1.5rem;
         }
